Remove unused flavors and some unused files
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/nn.yml
+++ b/shared/latex/en/nn/nn.yml
@@ -22,7 +22,7 @@ flavors:
     - gradient-descent
     - optimize
     - deep-optimize
-    - regularization
+    - regularisation
     - playground
     - /en/questions
     - $/en/tf-keras: drn
@@ -39,7 +39,7 @@ flavors:
     - gradient-descent
     - optimize
     - deep-optimize
-    - regularization
+    - regularisation
     - playground
     - /en/questions
     - $/en/tf-keras: dpl
