Typo and remove help pointers for acp
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/supervised/supervised.yml
+++ b/shared/latex/en/supervised/supervised.yml
@@ -1,6 +1,6 @@
 default_titles:
   classification: Classification
-  cost-error-function: Lost Function
+  cost-error-function: Loss Function
 
   regression-lineaire: Linear Regression
   regression-logistique: Logistic Regression
