--- a/shared/plt/separable-problem-nonlinear-solution.yml
+++ b/shared/plt/separable-problem-nonlinear-solution.yml
@@ -1,5 +1,5 @@
 author: mlambda
 license: CC-BY-SA-4.0
-title: Illustration d'un SVM à noyau pôlynomial
-title_en: SVM using a polynomiale kernel
+title: Illustration d'un SVM à noyau polynômial
+title_en: SVM using a polynomial kernel
 
