mise a jour yml pour intra st micro

--- a/orsys/INTRA/2023-03-STMICRO/targets.yml
+++ b/orsys/INTRA/2023-03-STMICRO/targets.yml
@@ -21,7 +21,7 @@
   title: Algorithmes Non-supervisés
   sections:
     - path: unsupervised
-      flavor: mlb
+      flavor: intra-microst
     - path: recommander-system
       flavor: full
 
