Add regexes to BDA en NLP flavor
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nlp/nlp.yml
+++ b/shared/latex/en/nlp/nlp.yml
@@ -19,6 +19,7 @@ flavors:
   bda:
     - ml-nlp
     - usages-nlp
+    - $/en/python/regexes: full
     - preprocessing
     - tf-idf
     - /en/questions
