fix rajouter supervised dans orsys/iao

--- a/shared/latex/supervised/supervised.yml
+++ b/shared/latex/supervised/supervised.yml
@@ -17,6 +17,11 @@ flavors:
     - svm
     - demo-sklearn-svm
     - tp-svm-text
+  iao:
+    - trees
+    - trees-details
+    - random-forest
+    - /questions
   bda:
     - /prerequisites/proba-rappel
     - /bayesian/naive-bayes
