--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,24 +2,31 @@
 authors = ["m09 <142691+m09@users.noreply.github.com>", "fmg", "nyx"]
 description = "Slide decks managed by deckz."
 homepage = "https://github.com/m09/formations"
+include = ["figures/plots/data/**/*"]
 license = "Apache-2.0"
 name = "formations"
+packages = [{include = "plots", from = "figures"}]
 version = "1.0.0"
 
 [tool.poetry.dependencies]
+Pillow = "^9"
 Pygments = "^2"
 deckz = ">= 19.0.1"
-plots = {path = "figures/plt", develop = true}
+matplotlib = "^3"
+pandas = "^1"
 python = ">= 3.8.1, < 3.11"
+scikit-learn = "^1"
+scipy = "^1"
+seaborn = "^0.12"
+tensorflow = "^2.12"
+wikipedia = "^1"
+wordcloud = "^1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23"
 flake8 = "^6"
-flake8-bugbear = "^23"
-flake8-docstrings = "^1"
 isort = "^5"
 mypy = "^1"
-pylint = "^2.17.1"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
