Run tools on the figures python code and fix errors
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ flake8 = "^6"
 isort = "^5"
 mypy = "^1"
 
+[tool.isort]
+profile = "black"
+
 [build-system]
 build-backend = "poetry.core.masonry.api"
 requires = ["poetry-core"]
