--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ version = "1.0.0"
 [tool.poetry.dependencies]
 Pillow = "^9"
 Pygments = "^2"
-deckz = ">= 19.0.1"
 matplotlib = "^3"
 pandas = "^1"
 python = ">= 3.8.1, < 3.11"
@@ -21,6 +20,7 @@ seaborn = "^0.12"
 tensorflow = "^2.12"
 wikipedia = "^1"
 wordcloud = "^1"
+deckz = "^20.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23"
