Correction des targets micro st (encore)

--- a/orsys/INTRA/2023-03-STMICRO/targets.yml
+++ b/orsys/INTRA/2023-03-STMICRO/targets.yml
@@ -21,7 +21,7 @@
   title: Algorithmes Non-supervisés
   sections:
     - path: unsupervised
-      flavor: intra-microst
+      flavor: intra-stmicro
     - path: recommander-system
       flavor: full
 
