--- a/shared/latex/unsupervised/unsupervised.yml
+++ b/shared/latex/unsupervised/unsupervised.yml
@@ -25,7 +25,7 @@ flavors:
     - $dimensionality-reduction: mlb
     - $clustering: intra-l-oreal
     - $anomaly-detection: full-no-tree
-  intra-microst:
+  intra-stmicro:
     - introduction
     - $dimensionality-reduction: mlb
     - $clustering: intra-stmicro
