--- a/profind/company-config.yml
+++ b/profind/company-config.yml
@@ -1,4 +1,4 @@
-company_logo: img/logos/eni
+company_logo: img/logos/profind
 company_logo_height: 1cm
-company_name: ENI
-company_website: https://www.eni-service.fr/
+company_name: PROFIND
+company_website: https://www.profind.net/
