--- a/shared/latex/en/python/intro/intro.yml
+++ b/shared/latex/en/python/intro/intro.yml
@@ -1,5 +1,5 @@
 flavors:
   full:
     - intro
-    - /questions
-title: Introduction au langage Python
+    - /en/questions
+title: Python Language
