--- a/profind/psd/en/deck-config.yml
+++ b/profind/psd/en/deck-config.yml
@@ -1,2 +1,2 @@
-deck_acronym: PDA
-deck_title: Python Introduction for Data Analysis
+deck_acronym: PSD
+deck_title: Python Course for Software Development
