traduction des TP de python avancé

--- a/shared/latex/en/python/advanced/advanced.yml
+++ b/shared/latex/en/python/advanced/advanced.yml
@@ -10,6 +10,9 @@ default_titles:
   tp: Exercises
 flavors:
   psd:
+    - comprehensions
+    - tp-comprehensions
+    - /en/questions
     - generators
     - /en/questions
     - tp-generators
