Ajout d'une courte présentation SQLite english

--- a/profind/psd/en/targets.yml
+++ b/profind/psd/en/targets.yml
@@ -25,6 +25,12 @@
     - path: en/python/linting
       flavor: full
 
+- name: databases
+  title: Introduction to DB API with SQLite
+  sections:
+    - path: en/python/databases
+      flavor: full
+
 - name: production
   title: Production tools
   sections:
