Improve iyt skeleton and create related colabs
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/iyt/targets.yml
+++ b/orsys/iyt/targets.yml
@@ -14,7 +14,7 @@
       flavor: full
 
     - path: python/data-science
-      flavor: full
+      flavor: iyt
 
     - path: python/dataviz
       flavor: full
