--- a/shared/latex/python/data-science/data-science.yml
+++ b/shared/latex/python/data-science/data-science.yml
@@ -17,4 +17,13 @@ flavors:
     - /questions
     - tp-pandas
 
+  iyt:
+    - intro
+    - numpy
+    - /questions
+    - tp-numpy
+    - pandas
+    - /questions
+    - tp-pandas
+
 title: Modules de science des données
