Add spark slides
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/bigdata/bigdata.yml
+++ b/shared/latex/python/bigdata/bigdata.yml
@@ -1,5 +1,4 @@
 default_titles:
-  intro: Introduction
   spark: Spark
   formats: Formats
 
@@ -7,6 +6,8 @@ flavors:
   full:
     - intro
     - spark
+    - /questions
+    - demo
     - formats
     - /questions
     - tp
