minor change to contact.tex;add en/ml bait flavor for profind/pda

--- a/shared/latex/en/ml/ml.yml
+++ b/shared/latex/en/ml/ml.yml
@@ -11,7 +11,10 @@ flavors:
     - learning
     - evaluation
     - /en/questions
-
+  bait:
+    - intro
+    - learning
+    - /en/questions
   mle:
     - intro
     - data-preparation
