--- a/shared/latex/en/python/c-interoperability/c-interoperability.yml
+++ b/shared/latex/en/python/c-interoperability/c-interoperability.yml
@@ -1,7 +1,12 @@
-
+default_titles:
+  ctypes: \texttt{ctypes} module
+  cython: \texttt{cython} module
 flavors:
   full:
     - ctypes
     - cython
+    - /en/questions
+    - c-interoperability-demo
+    
 
 title: Interoperability with C
