Use new Spark section for MLB
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/bigdata/bigdata.yml
+++ b/shared/latex/python/bigdata/bigdata.yml
@@ -12,4 +12,11 @@ flavors:
     - /questions
     - tp
 
+  mlb:
+    - intro
+    - spark
+    - /questions
+    - demo
+    - tp
+
 title: Traitement de données volumineuses
