--- a/orsys/mlb/targets.yml
+++ b/orsys/mlb/targets.yml
@@ -29,7 +29,6 @@
     - path: nn
       flavor: bda
 
-
 - name: j4
   title: Jour 4 --- Ingénierie
   sections:
@@ -45,8 +44,8 @@
     - path: tools
       flavor: devops
 
-    - path: tools
-      flavor: demo-spark
+    - path: python/bigdata
+      flavor: mlb
 
     - path: sectors
       flavor: full
