mv data-science/pandas.tex to new data-science/pd section with full blank new tex and TPs; orsys/pnd/target.yml maj

--- a/orsys/pnd/targets.yml
+++ b/orsys/pnd/targets.yml
@@ -8,9 +8,10 @@
       flavor: pnd
 
     - path: python/data-science
-      flavor: iyt
+      title: Calcul scientifique
+      flavor: pnd
 
-    - path: python/dataviz
-      flavor: full
+    - path: python/data-science/pd
+      flavor: pnd
 
     - contact
