--- a/shared/latex/ml/ml.yml
+++ b/shared/latex/ml/ml.yml
@@ -4,7 +4,6 @@ default_titles:
   evaluation: Évaluation
   intro: Introduction
   learning: Apprentissage
-  /python/data-science/pandas: Introduction pandas (optionnelle)
   tp-data: Travaux Pratiques
   /tp-help: Ressources pour les travaux pratiques
 
@@ -49,8 +48,7 @@ flavors:
     - data-preparation
     - evaluation
     - /questions
-    - /python/data-science/pandas
-    - /python/data-science/tp-pandas
+    - $/python/data-science/pd : light
     - /tp-help
     - tp-data
     - learning
