orsys/pnd ready

--- a/shared/latex/python/data-science/pd/pd.yml
+++ b/shared/latex/python/data-science/pd/pd.yml
@@ -25,6 +25,7 @@ flavors:
     - tp-optimization
   pnd:
     - pandas: Introduction
+    - tp-pandas: Les bases connues
     - multi-index
     - groupby
     - /questions
