--- a/orsys/tho/targets.yml
+++ b/orsys/tho/targets.yml
@@ -4,7 +4,7 @@
     - path: about
       flavor: orsys-2j
 
-    - path: programmation
+    - path: programming
       flavor: tho
 
     - path: python/intro
