killed  parentless flavor;move nn/gan to nn/generative; add stable-diffusion to it;final orsys/intra/mle-fiducre.yml

--- a/eni/cv3/targets.yml
+++ b/eni/cv3/targets.yml
@@ -16,8 +16,8 @@
     - path: nn/ae
       flavor: dpl
 
-    - path: nn/gan
-      flavor: full
+    - path: nn/generative
+      flavor: gan
 
     - path: nn/rnn
       flavor: dpl
