Ajout du target pyi (incomplet)

--- a/orsys/pyi/deck-config.yml
+++ b/orsys/pyi/deck-config.yml
@@ -1,2 +1,2 @@
-deck_acronym: BDA
-deck_title: Data Analytics avec Python
+deck_acronym: PYI
+deck_title: Intelligence artificielle, traitement d’image avec Python
