--- a/shared/latex/en/ml/ml.yml
+++ b/shared/latex/en/ml/ml.yml
@@ -15,6 +15,9 @@ flavors:
     - intro
     - learning
     - /en/questions
+    - data-preparation
+    - /en/questions
+    - tp-data
   mle:
     - intro
     - data-preparation
