Improve MLW skeleton
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/mlw/targets.yml
+++ b/orsys/mlw/targets.yml
@@ -4,4 +4,13 @@
     - path: about
       flavor: orsys-3j
 
+    - path: mlops/ml-lifecycle
+      flavor: mlw
+
+    - path: mlops/technics
+      flavor: mlw
+
+    - path: mlops/deployment
+      flavor: mlw
+
     - contact
